--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@cosmjs/cosmwasm-stargate": "^0.30.0",
     "tsparticles-engine": "^2.9.3",
     "tsparticles-slim": "^2.9.3",
     "vue": "^3.2.47",
@@ -29,6 +30,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "sass": "^1.59.2",
     "tailwindcss": "^3.2.7",
     "typescript": "~4.8.4",
